[package]
name = "solana-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang-0-29 = { package = "anchor-lang", version = "=0.29", optional = true }
anchor-lang-0-30 = { package = "anchor-lang", version = "0.30.1", optional = true }
bincode = "1.3.3"
env_logger = "0.11"
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.16"
solana-client = "1.16"
solana-transaction-status = "1.16"
solana-address-lookup-table-program = "1.16"
thiserror = "1.0"
tokio = { version = "1.36", features = ["sync"] }
semver = "1.0.23"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[features]
default = ["anchor-lang-0-29"]
